resizing. still need fixes to run properly on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,7 +6,7 @@ $bg-color: #fffefe;
 $hl-color: #2196f3;
 $muted-color: mix($bg-color, #000, 50%);
 $trans-time: 300ms;
-$width: 52rem;
+$width: 50%;
 $white: #fff;
 $black: #282936;
 
@@ -59,9 +59,13 @@ main {
 
 .wilson-block {
   height: 50%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
 
   img {
-    height: 100%;
+    height: 60%;
   }
 }
 
